--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -9,60 +9,49 @@
     <!-- Información del Freelancer -->
     <div class="w-full bg-bg_gray shadow-lg rounded-lg p-6 md:p-8">
         <div class="flex flex-col sm:flex-row items-center sm:items-start">
+            
             <img src="{% if request.profile.photo %}{{ request.profile.photo.url }}{% else %}https://img.freepik.com/vector-premium/icono-perfil-avatar-predeterminado-imagen-usuario-redes-sociales-icono-avatar-gris-silueta-perfil-blanco-ilustracion-vectorial_561158-3383.jpg{% endif %}"
                 alt="Foto de {{ request.profile.user.username }}" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full shadow-lg">
+
             <div class="sm:ml-6 mt-6 sm:mt-0 flex-1">
-                <h1 class="text-3xl sm:text-3xl font-bold text-primary_medium">{{ request.profile.user.username }}</h1>
+                <h1 class="text-3xl sm:text-3xl font-bold text-primary_black">{{ request.profile.user.username }}</h1>
                 <p class="text-primary_black font-semibold">
                     {% if request.profile.job_title %}
                         {{ request.profile.job_title }}
-                    {% else %}
-                        {% translate "No se ha agregado información de empleo" %}
                     {% endif %}
                 </p>
                 <p class="text-primary_black mt-2">
                     {% if request.profile.about_me %}
                         {{ request.profile.about_me }}
                     {% else %}
-                        {% translate "No se ha agregado descripción personal" %}
+                        {% translate "Sin descripción personal." %}
                     {% endif %}
                 </p>
                 <p class="text-primary_black mt-2 flex items-center">
                     {% if request.profile.location %}
                         {{ request.profile.location }}
-                    {% else %}
-                        {% translate "Ubicación no proporcionada" %}
+                        <span class="ml-2">
+                            {% include 'icon/LocationIcon.html' %}
+                        </span>
                     {% endif %}
-                    <span class="ml-2">
-                        {% include 'icon/LocationIcon.html' %}
-                    </span>
                 </p>
                 <div class="flex space-x-4 mt-4">
                     {% if request.profile.linkedin %}
                     <a href="{{ request.profile.linkedin }}" aria-label="LinkedIn"
                         class="text-primary_medium hover:text-primary_dark">
                         {% include 'icon/LinkedInIcon.html' %}
-                    </a>
-                    {% else %}
-                    <p class="text-gray-500">{% translate "No se ha agregado LinkedIn" %}</p>
                     {% endif %}
                 
                     {% if request.profile.github %}
                     <a href="{{ request.profile.github }}" aria-label="GitHub"
                         class="text-primary_medium hover:text-primary_dark">
                         {% include 'icon/GithubIcon.html' %}
-                    </a>
-                    {% else %}
-                    <p class="text-gray-500">{% translate "No se ha agregado GitHub" %}</p>
                     {% endif %}
                 
                     {% if request.profile.twitter %}
                     <a href="{{ request.profile.twitter }}" aria-label="Twitter"
                         class="text-primary_medium hover:text-primary_dark">
                         {% include 'icon/TwitterIcon.html' %}
-                    </a>
-                    {% else %}
-                    <p class="text-gray-500">{% translate "No se ha agregado Twitter" %}</p>
                     {% endif %}
                 </div>
                 
@@ -84,7 +73,7 @@
                     {{ skill.name }}
                 </span>
                 {% empty %}
-                <p class="text-gray-500">{% translate "No se han agregado habilidades aún." %}</p>
+                <p class="text-gray-500">{% translate "Sin habilidades asignadas." %}</p>
                 {% endfor %}
             </div>
         </div>
@@ -94,10 +83,11 @@
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
         <div class="flex justify-between items-center">
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Experiencia Laboral" %}</h2>
+            {% if is_owner %}
             <a href="{% url 'add_experience' %}"
-                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                {% translate "Añadir" %}
+                class="bg-primary_medium text-white px-1 py-1 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
             </a>
+            {% endif %}
         </div>
 
         <ul class="mt-4 space-y-6">
@@ -126,16 +116,22 @@
 
     <!-- Portafolio Section -->
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
-        <div class="flex justify-between items-center">
+        <div class="flex justify-between relative">
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Portafolio" %}</h2>
-            <div class="flex flex-col md:flex-row gap-2">
-                <a href="{% url 'add_project' %}"
-                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                    {% translate "Añadir Proyecto" %}
+            
+            {% if is_owner %}
+            <button onclick="toggleDropdown()" class="bg-primary_medium text-white px-1 py-1 rounded-xl shadow hover:bg-primary_dark transition-transform duration-300 hover:scale-105 flex items-center space-x-2">
+                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
+            </button>
+            {% endif %}
+        
+            <!-- Menú desplegable -->
+            <div id="dropdownMenu" class="hidden absolute right-0 mt-9 w-48 bg-white rounded-md shadow-lg border border-gray-200">
+                <a href="{% url 'add_course' %}" class="block px-4 py-2 text-primary_black hover:bg-gray-100">
+                    {% translate "Añadir curso" %}
                 </a>
-                <a href="{% url 'add_course' %}"
-                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                    {% translate "Añadir Curso" %}
+                <a href="{% url 'add_project' %}" class="block px-4 py-2 text-primary_black hover:bg-gray-100">
+                    {% translate "Añadir proyecto" %}
                 </a>
             </div>
         </div>
@@ -188,10 +184,11 @@
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
         <div class="flex justify-between items-center">
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Curriculum Vitae" %}</h2>
+            {% if is_owner %}
             <a href="{% url 'upload_curriculum' %}"
-                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                {% translate "Añadir" %}
+                class="bg-primary_medium text-white px-1 py-1 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
             </a>
+            {% endif %}
         </div>
 
         {% if profile.freelancer_cv and profile.freelancer_cv.file %}
@@ -208,7 +205,7 @@
         <!-- Contenedor de Calificaciones -->
         <div class="space-y-6 mt-4">
             {% for rating in ratings %}
-            <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-primary_medium transition-transform duration-300 hover:shadow-lg hover:scale-105">
+            <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-primary_medium">
                 <div class="flex justify-between items-center">
                     <div class="flex flex-col md:flex-row items-center space-x-4">
                         <!-- Mostrar estrellas -->
@@ -219,21 +216,16 @@
                         </div>
                         <p class="text-gray-500 text-sm">por <strong>{{ rating.client.username }}</strong></p>
                     </div>
-                    <p class="text-gray-400 text-sm">{{ rating.created_at|date:"d M Y" }}</p>
-                </div>
-                <p class="mt-4 text-gray-700 text-md">{{ rating.comment }}</p>
-
-                <!-- Botones para acciones del comentario (Editar o Eliminar) -->
-                <div class="flex justify-end space-x-4 mt-2">
                     <!-- Eliminar comentario -->
                     <form action="{% url 'delete_rating' rating.id %}" method="post" class="inline">
                         {% csrf_token %}
                         <button type="submit"
                             class="text-red-500 hover:underline text-sm font-semibold hover:text-red-600 transition-colors">
-                            Eliminar Calificación
+                            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 7l16 0" /><path d="M10 11l0 6" /><path d="M14 11l0 6" /><path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" /><path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" /></svg>
                         </button>
                     </form>
                 </div>
+                <p class="mt-4 text-gray-700 text-md">{{ rating.comment }}</p>
 
                 {% if rating.response %}
                 <!-- Respuesta del Freelancer -->
@@ -255,11 +247,12 @@
                 </div>
                 {% else %}
                 <!-- Botón para responder si no hay respuesta -->
-                <div class="mt-4">
+                <div class="mt-4 flex justify-between">
                     <a href="javascript:void(0)" onclick="openResponseModal('{{ rating.id }}')"
                         class="inline-block bg-primary_medium text-white px-4 py-2 rounded-md hover:bg-primary_dark transition-colors">
-                        Responder a esta calificación
+                        {% translate "Responder" %}
                     </a>
+                    <p class="text-gray-400 text-sm">{{ rating.created_at|date:"d M Y" }}</p>
                 </div>
                 {% endif %}
             </div>
@@ -269,11 +262,15 @@
         </div>
 
         <!-- Botón para agregar calificación -->
-        {% if not is_owner %}
+        {% if not is_owner and request.profile %}
         <div class="mt-8 text-center">
             <a href="javascript:void(0)" onclick="openRatingModal()"
-                class="inline-block bg-primary_medium text-white px-6 py-3 rounded-lg hover:bg-primary_dark transition-colors">
+               class="inline-flex items-center bg-primary_medium text-white px-6 py-3 rounded-lg hover:bg-primary_dark transition-colors">
                 {% translate "Calificar" %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="ml-2">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .1a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z"/>
+                </svg>
             </a>
         </div>
         {% endif %}
@@ -329,7 +326,6 @@
         </div>
     </div>
 
-    <!-- Script para manejar el modal -->
     <script>
         let ratingId; // Variable para almacenar el ID de la calificación
         let responseId; // Variable para almacenar el ID de la respuesta en caso de edición
@@ -467,6 +463,18 @@
                 document.getElementById(`star-${i}`).classList.add('text-primary_dark');
             }
         }
+
+        function toggleDropdown() {
+            const dropdownMenu = document.getElementById("dropdownMenu");
+            dropdownMenu.classList.toggle("hidden");
+        }
+    
+        window.addEventListener("click", function(e) {
+            const dropdownMenu = document.getElementById("dropdownMenu");
+            if (!e.target.closest(".relative")) {
+                dropdownMenu.classList.add("hidden");
+            }
+        });
     </script>
 </div>
 {% endblock %}
