feat: created the mark as read and delete views for the notifications

--- a/src/templates/profile/notifications.html
+++ b/src/templates/profile/notifications.html
@@ -76,6 +76,7 @@
 <script>
     function markNotificationsAsRead() {
         // Completar funcionalidad para marcar todas las notificaciones como leídas
+        //ya existe el endpoint falta es hacer la logica para llamarlo
     }
 
     // JavaScript para abrir y cerrar el modal
