--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -15,8 +15,14 @@
         <div class="flex flex-col md:flex-row pt-10">
             <!-- Left Section with Image -->
             <div class="flex-shrink-0">
+                {% if project.image %}
+                <img src="{{ project.image.url }}" alt="{{ project.title }}" class="w-full md:w-[400px] h-auto rounded-xl mr-6">
+                
+                {% else %}
                 <img src="https://picsum.photos/450/300" alt="Project Image"
                      class="w-full md:w-[400px] h-auto rounded-xl mr-6">
+                
+                {% endif %}
                 <div class="mt-4 space-y-2">
                     <h2 class="text-3xl font-bold text-primary_black">{{ project.title }}</h2>
                     <p class="text-lg font-semibold text-primary_black">{% translate "Presupuesto:" %} <span class="text-primary_medium">{{ project.budget }}</span></p>
