--- a/src/templates/projects/project_card.html
+++ b/src/templates/projects/project_card.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="w-full bg-gray-200 rounded-full h-2">
-        <div class="bg-primary_light h-2 rounded-full" style="width: {{ project.progress }}%"></div>
+        <div class="bg-primary_light h-2 rounded-full" style="width: '{{ project.progress }}%'"></div>
     </div>
 </div>
 
