--- a/src/templates/projects/project_card.html
+++ b/src/templates/projects/project_card.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% if not list %}
-<div class="bg-white rounded-lg shadow-md transition-transform transform hover:shadow-lg duration-300 w-full max-w-xs md:max-w-sm flex flex-col overflow-hidden">
+<div class="bg-white rounded-lg shadow-md transition-transform transform hover:shadow-lg duration-300 w-full max-w-xs md:max-w-sm flex flex-col ">
     <!-- Image or placeholder -->
     <div class="h-28 w-full bg-purple-600">
         {% if project.image %}
