--- a/src/templates/chat/chat_room.html
+++ b/src/templates/chat/chat_room.html
@@ -16,6 +16,11 @@
                 </div>
                 <h2 class="ml-3 text-lg font-semibold text-primary_dark">Chat con {{ member.username }}</h2>
             </div>
+
+                <button id="clear-chat" class="bg-red-500 text-white px-2 py-2 rounded-lg ml-auto">
+                    Borrar chat
+                </button>
+
         </div>
 
         <!-- Messages and Input Area -->
@@ -50,14 +55,7 @@
                         Enviar
                     </button>
                     <!-- Botón para limpiar el chat -->
-<div class="p-4 text-right">
-    <button 
-        id="clear-chat" 
-        class="bg-red-500 text-bg_white px-4 py-2 rounded-lg"
-    >
-        Eliminar Chat
-    </button>
-</div>
+
 
                 </div>
             </div>
