refactor: remove unnecessary container classes for improved layout consistency across project templates

--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Main content -->
-    <div class="flex flex-col gap-5 w-full md:pl-72 px-7 py-2">
+    <div class="flex flex-col gap-5 w-full h-full md:pl-72 px-7 py-2">
         {% include "navigation/top_bar_controls.html" %}
         <div class="flex flex-col gap-5">
             {% block app_content %}
