--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block app_content %}
-<div class="container">
+<div class="">
 
     {%if user_is_member or user_is_admin or user_is_viewer %}
     {% include 'projects/project_navigation_tabs.html' %}
