--- a/src/templates/projects/project_delete.html
+++ b/src/templates/projects/project_delete.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% block content %}
-<div class="container mx-auto px-4 py-8">
+<div class="py-8">
     <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6">
         <h1 class="text-3xl font-bold mb-6">{% translate "Eliminar Proyecto" %}</h1>
         <p class="mb-4">{% translate "Estas seguro que deseas eliminar este proyecto " %}{{ project.title }}"?</p>
