--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% block app_content %}
-<div class="container mx-auto px-4 py-6">
+<div class=" py-6">
     <div class="flex flex-col gap-2 md:flex-row justify-between items-center w-full bg-bg_gray py-2 px-4 rounded-xl mb-4">
         <div class="flex flex-row gap-2">
             {% url 'project_list' as project_main_view %}
