--- a/src/templates/projects/project_requirements.html
+++ b/src/templates/projects/project_requirements.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% block content %}
-<div class="container mx-auto px-4 py-12">
+<div class="py-12">
     <!-- Sección de Requerimientos del proyecto -->
     <div class="bg-white rounded-xl shadow-lg p-8 lg:p-10">
         <!-- Título de la Sección de Requerimientos -->
