--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -32,7 +32,7 @@
 
     <div
         class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bg-bg_gray w-full h-full p-4 rounded-xl">
-        {% for project in projects %}
+        {% for project in own_projects %}
         {% include 'projects/project_card.html' %}
         {% empty %}
         <p class="text-gray-500 col-span-3">{% translate "Sin resultados." %}</p>
